# ambient-ember-rust-sdk

./: .gitignore  Cargo.toml  README.md
ambient-signer/: Cargo.toml  README.md
ambient-signer/src/: lib.rs
core/: Cargo.toml  error.rs
core/src/: fill_quote.rs  instruction.rs  lib.rs  permit.rs
core/src/state/: cma.rs  cma_test.rs  global.rs  market.rs  math.rs  mod.rs  order.rs  orderbook.rs  position.rs
core/src/storage/: market_order_log.rs  market_order_log_wrapper.rs  mod.rs  order_detail_registry.rs  order_detail_storage.rs  order_registry.rs  order_storage.rs  safe_zero_copy_order_storage.rs  zero_copy_market_order_log.rs  zero_copy_order_storage.rs
