[package]
name = "ambient-signer"
version = "0.1.0"
edition = "2021"
description = "Minimal dependencies crate for signing and sending payloads to Ambient Exchange"
license = "MIT OR Apache-2.0"

[features]
default = ["permit-signing"]
permit-signing = ["ed25519-dalek"]

[dependencies]
borsh = { version = "0.9.3" }
solana-program = "1.18.26"
ed25519-dalek = { version = "1.0", optional = true }
hex = "0.4.3"
rand = "0.7"
serde_json = "1.0"