[package]
name = "ambient-signer"
version = "0.1.0"
edition = "2021"
description = "Minimal dependencies crate for signing and sending payloads to Ambient Exchange"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
borsh = "1.5.7"
solana-sdk = "1.18.26"
hex = "0.4.3"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }